# BITWATCH

./: .gitignore  bot.py  checker.py  config.py  main.py  notifier.py  pyproject.toml  readme.md  requirement.txt  requirements.txt  scheduler.py  scraper.py
data/: last_price.txt
